@@ -4,11 +4,13 @@ import com.slack.kaldb.logstore.LogMessage;
 import com.slack.kaldb.logstore.opensearch.KaldbBigArrays;
 import com.slack.kaldb.logstore.opensearch.OpenSearchAdapter;
 import com.slack.kaldb.logstore.opensearch.ScriptServiceProvider;
+import org.opensearch.search.aggregations.InternalAggregation;
+import org.opensearch.search.aggregations.pipeline.PipelineAggregator;
+
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import org.opensearch.search.aggregations.InternalAggregation;
-import org.opensearch.search.aggregations.pipeline.PipelineAggregator;
+import java.util.stream.Collectors;
 
 /**
  * This class will merge multiple search results into a single search result. Takes all the hits
@@ -91,7 +93,7 @@ public class SearchResultAggregatorImpl<T extends LogMessage> implements SearchR
                 Comparator.comparing(
                     (T m) -> m.getTimestamp().toEpochMilli(), Comparator.reverseOrder()))
             .limit(searchQuery.howMany)
-            .toList();
+            .collect(Collectors.toList());
 
     return new SearchResult<>(
         resultHits,
