@@ -1,18 +1,5 @@
 package com.slack.kaldb.chunkManager;
 
-import static com.slack.kaldb.chunk.ChunkInfo.MAX_FUTURE_TIME;
-import static com.slack.kaldb.logstore.LuceneIndexStoreImpl.MESSAGES_FAILED_COUNTER;
-import static com.slack.kaldb.logstore.LuceneIndexStoreImpl.MESSAGES_RECEIVED_COUNTER;
-import static com.slack.kaldb.server.KaldbConfig.DEFAULT_START_STOP_DURATION;
-import static com.slack.kaldb.testlib.ChunkManagerUtil.TEST_HOST;
-import static com.slack.kaldb.testlib.ChunkManagerUtil.TEST_PORT;
-import static com.slack.kaldb.testlib.ChunkManagerUtil.fetchLiveSnapshot;
-import static com.slack.kaldb.testlib.ChunkManagerUtil.fetchNonLiveSnapshot;
-import static com.slack.kaldb.testlib.ChunkManagerUtil.makeChunkManagerUtil;
-import static com.slack.kaldb.testlib.MetricsUtil.getCount;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.awaitility.Awaitility.await;
-
 import com.adobe.testing.s3mock.junit4.S3MockRule;
 import com.slack.kaldb.chunk.Chunk;
 import com.slack.kaldb.chunk.ChunkInfo;
@@ -26,6 +13,12 @@ import com.slack.kaldb.testlib.ChunkManagerUtil;
 import com.slack.kaldb.testlib.KaldbConfigUtil;
 import com.slack.kaldb.testlib.MessageUtil;
 import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
+import org.assertj.core.data.Offset;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.ClassRule;
+import org.junit.Test;
+
 import java.io.IOException;
 import java.time.Duration;
 import java.time.Instant;
@@ -34,11 +27,20 @@ import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.concurrent.TimeoutException;
-import org.assertj.core.data.Offset;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Test;
+import java.util.stream.Collectors;
+
+import static com.slack.kaldb.chunk.ChunkInfo.MAX_FUTURE_TIME;
+import static com.slack.kaldb.logstore.LuceneIndexStoreImpl.MESSAGES_FAILED_COUNTER;
+import static com.slack.kaldb.logstore.LuceneIndexStoreImpl.MESSAGES_RECEIVED_COUNTER;
+import static com.slack.kaldb.server.KaldbConfig.DEFAULT_START_STOP_DURATION;
+import static com.slack.kaldb.testlib.ChunkManagerUtil.TEST_HOST;
+import static com.slack.kaldb.testlib.ChunkManagerUtil.TEST_PORT;
+import static com.slack.kaldb.testlib.ChunkManagerUtil.fetchLiveSnapshot;
+import static com.slack.kaldb.testlib.ChunkManagerUtil.fetchNonLiveSnapshot;
+import static com.slack.kaldb.testlib.ChunkManagerUtil.makeChunkManagerUtil;
+import static com.slack.kaldb.testlib.MetricsUtil.getCount;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.awaitility.Awaitility.await;
 
 public class ChunkCleanerServiceTest {
   private static final String S3_TEST_BUCKET = "test-kaldb-logs";
@@ -263,7 +265,13 @@ public class ChunkCleanerServiceTest {
     assertThat(getCount(RollOverChunkTask.ROLLOVERS_COMPLETED, metricsRegistry)).isEqualTo(2);
 
     checkMetadata(4, 2, 2, 2, 0);
-    assertThat(snapshotMetadataStore.listSync().stream().map(s -> s.maxOffset).sorted().toList())
+    assertThat(
+            snapshotMetadataStore
+                .listSync()
+                .stream()
+                .map(s -> s.maxOffset)
+                .sorted()
+                .collect(Collectors.toList()))
         .containsExactlyElementsOf(List.of(10L, 10L, 11L, 11L));
 
     assertThat(chunk1.isReadOnly()).isTrue();
@@ -294,7 +302,13 @@ public class ChunkCleanerServiceTest {
     assertThat(chunkManager.getChunkList().contains(chunk2)).isFalse();
 
     checkMetadata(3, 1, 2, 1, 0);
-    assertThat(snapshotMetadataStore.listSync().stream().map(s -> s.maxOffset).sorted().toList())
+    assertThat(
+            snapshotMetadataStore
+                .listSync()
+                .stream()
+                .map(s -> s.maxOffset)
+                .sorted()
+                .collect(Collectors.toList()))
         .containsOnly(10L, 11L, 11L);
 
     // Delete chunk1.
@@ -305,7 +319,13 @@ public class ChunkCleanerServiceTest {
     assertThat(chunkManager.getChunkList().size()).isZero();
 
     checkMetadata(2, 0, 2, 0, 0);
-    assertThat(snapshotMetadataStore.listSync().stream().map(s -> s.maxOffset).sorted().toList())
+    assertThat(
+            snapshotMetadataStore
+                .listSync()
+                .stream()
+                .map(s -> s.maxOffset)
+                .sorted()
+                .collect(Collectors.toList()))
         .containsOnly(10L, 11L);
   }
 
@@ -322,9 +342,9 @@ public class ChunkCleanerServiceTest {
     assertThat(fetchNonLiveSnapshot(snapshots).size()).isEqualTo(expectedNonLiveSnapshotSize);
     List<SearchMetadata> searchNodes = searchMetadataStore.listSync();
     assertThat(searchNodes.size()).isEqualTo(expectedSearchNodeSize);
-    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).toList())
+    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).collect(Collectors.toList()))
         .containsExactlyInAnyOrderElementsOf(
-            searchNodes.stream().map(s -> s.snapshotName).toList());
+            searchNodes.stream().map(s -> s.snapshotName).collect(Collectors.toList()));
     assertThat(snapshots.stream().filter(s -> s.endTimeEpochMs == MAX_FUTURE_TIME).count())
         .isEqualTo(expectedInfinitySnapshotSize);
   }
